app/assets/stylesheets/has-styles.scss
/* ## Bring in all Compass Helpers */
@import "partials/base";
@import "project/has-ngs_fonts";


// *********************************************
// Table of Contents
// *********************************************


//   1. Universal
//   2. Molecular Workbench Helpers
//   3. Project Styles
//   4. Activity nav
//   5. Layout modes
//   6. Headline + Intro
//   7. Sticky Interactives
//   8. Interactive + Questions
//   9. Styling for typographic elements
//  10. Sidebar
//  11. Related Module
//  12. Image Types
//  13. Activity Footer
//  14. Site Footer
//  15. Saved Label
//  16. Activity Index Page


// *********************************************
//  1. Universal
// *********************************************

a     {   text-decoration: none; color: inherit; }
b, strong  { font-weight: bold; font-family: $helv-bold;  }
em    { font-style: italic; }

header,
footer {
  margin: 0 0 26px;
  color: white;
}

body {
  background-size: 100%;
}

footer {
  margin-bottom: 0;
  padding: 26px;

  div.site-width {
    background-color: #d0e4ec;
    color: $emperor;
    padding: 5px;
  }
}

div.activity-mod>div.site-width {
  background-color: rgba(255,255,255,0.7);
  padding: 5px;
}

// *********************************************
//  2. Molecular Workbench Helpers
// *********************************************

// Text shadows included on various elements
@mixin drk-txt-shadow($color: $black-50) {
  @include text-shadow(0 -1px 0 darken($color, 15%));
}

@mixin lt-txt-shadow($color: #fff) {
  @include text-shadow(0 1px 0 lighten($color, 10%));
}

// Border used on questions and related-mod
.mod-border-rounded {
  border: 1px solid $black-10;
  @include border-radius(0 0 13px 13px);
}

// Clearfix
.cf { @include pie-clearfix; }

// Extra padding applied via JS when nav is in fixed position
.extra-pad { padding-top: 70px; }

// Button mixin. By default, a btn will be blue. Pass two colors into include to change color scheme
/* TODO: HAS-NGS uses different buttons */
@mixin btn( $color1: lighten($btn-blue2, 5%), $color2: darken($btn-blue, 5%) ) {
  font-size: 15px;
  font-family: $helv-reg;
  padding: 9px 13px;
  background: $color1;
  background-image: -webkit-linear-gradient( top, $color1, $color2);
  background-image:         linear-gradient( top, $color1, $color2);
  -webkit-box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 inset,
                      rgba(0, 0, 0, 0.2) 0 1px 2px;
          box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 inset,
                      rgba(0, 0, 0, 0.2) 0 1px 2px;
  @include border-radius(4px);
  @include drk-txt-shadow( darken($color1, 10%) );
  border: 1px solid $color2;
  margin-top: 13px;
  cursor: pointer;
  text-transform: none;
  text-align: center;
  @include trans;
  color: #fcfcfc;

  &:hover {
    background-color: darken($color1, 5%);
    background-image: -webkit-linear-gradient( top, darken($color1, 5%), darken($color2, 10%) );
    background-image:         linear-gradient( top, darken($color1, 5%), darken($color2, 10%) );
  }

  &:active {
    @include drk-txt-shadow( darken($color1, 10%) );
    background-color: darken($color1, 10%);
    background-image: -webkit-linear-gradient( top, darken($color1, 10%), darken($color2, 5%) );
    background-image:         linear-gradient( top, darken($color1, 10%), darken($color2, 5%) );
  }
}


// *********************************************
//  3. Project Styles
// *********************************************

// Site Width
.site-width {
  width: 960px;
  margin: 0 auto;
}


.activity-mod {
  margin-bottom: 26px;
  position: relative;
  font-family: $helv-reg;
}

// Site header
// --------------------------------

.site-logo-mod {
  @extend .cf;
  padding: 13px 0;
}

.site-logo {
  width: 12%;

  img {
    max-width: 100%;
  }

  &.logo-l {
    float: left;
  }

  &.logo-r {
    float: right;
  }

}


// *********************************************
//  4. Activity nav
// *********************************************

.activity-nav-mod {
  margin: 0 0 40px;
  position: relative;
  width: 100%;
  height: 50px;
  color: white;
  @extend .cf;
  @include trans;


/*  &.fixed {
    position: fixed;
    top: 0;
    background-color: lighten($lt-blue, 15%);
    @include box-shadow(0 2px 8px rgba(0, 0, 0, 0.2) );
    padding: 10px 6px;
    z-index: 9999;
  }
*/
}

.activity-nav-logo {
  float: left;

  img {
    max-width: 100%;
  }

  .h2 {
    font-size: 18px;
    font-weight: normal;
    line-height: 36px;
    color: white;
    margin-top: 8px;
    margin-left: 180px;
    &:before {
      content: 'ACTIVITY: '
    }
  }
}

// This controlls the layout of the nav
.l-nav {
      @include ui-grid-2(60%, 40%, 5%);
      background-color: $capecod;
      height: 50px;
      @include border-radius(2px);
}

.nav-menu {
  height: 50px;
  width: 130px;
  font-family: $helv-light;
  margin-left: 30px;
  font-size: 18px;
  padding-top: 15px;
  border-right: 2px solid white;
  float: left;
  /* TODO: down-arrow glyph */
  a#menu-trigger {
    cursor: pointer;
  }
}
/* ... */

